fix icon distortion

--- a/src/styles/maisvendidos.scss
+++ b/src/styles/maisvendidos.scss
@@ -37,6 +37,9 @@
             
             >img{
                 margin-right: 1em;
+                width: 50px;
+                height: 50px;
+                max-width: 100%;
             }
 
             >p{
